# piqueld

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
nix/: module.nix  pkgs.nix  shell.nix
piquel-core/: Cargo.toml
piquel-core/src/: config.rs  ipc.rs  lib.rs  logging.rs
piquel-core/src/config/: defaults.rs
piquel-core/src/ipc/: client.rs  message.rs  server.rs
piquel-core/src/logging/: logger.rs
piquel-macros/: Cargo.toml
piquel-macros/src/: lib.rs
piquelcore/: Cargo.toml
piquelcore/src/: config.rs  ipc.rs  lib.rs
piquelcore/src/config/: defaults.rs
piquelcore/src/ipc/: client.rs  message.rs
piquelctl/: Cargo.toml
piquelctl/src/: cli.rs  config.rs  lib.rs  main.rs
piqueld/: Cargo.toml
piqueld/src/: config.rs  docker.rs  git.rs  lib.rs  main.rs  server.rs  services.rs  state.rs
piqueld/src/git/: handle.rs  repository.rs
piqueld/src/ipc/: connection.rs  server.rs
piqueld/src/services/: docker.rs  git.rs
piqueld/src/services/docker/: error.rs
piqueld/src/services/git/: error.rs  handle.rs  repository.rs
