[workspace]
resolver = "3"
members = [
    "piquelcore",
    "piqueld",
    "piquelctl"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
clap = { version = "4", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
time = { version = "0.3", features = ["formatting"] }
gix = { version = "0.80", features = ["blocking-network-client" ] }
thiserror = { version = "2" }
anyhow = { version = "1" }
paste = { version = "1" }
