[workspace]
resolver = "3"
members = [
    "piquelcore",
    "piqueld",
    "piquelctl"
, "piquel-macros"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
time = { version = "0.3", features = ["formatting"] }
gix = { version = "0.80", features = ["blocking-network-client" ] }
paste = "1"
thiserror = "2"
anyhow = "1"

proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
