[workspace]
resolver = "3"
members = [
    "piquelcore",
    "piqueld",
    "piquelctl",
    "piquel-macros"
]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
