[package]
name = "piqueld"
version = "0.1.0"
edition = "2024"

[dependencies]
piquelcore = { path = "../piquelcore/" }
piquelmacros = { path = "../piquel-macros/" }
log.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
gix.workspace = true
thiserror.workspace = true
anyhow.workspace = true
paste.workspace = true
