[package]
name = "piqueld"
version = "0.1.0"
edition = "2024"

[dependencies]
piquelcore = { path = "../piquelcore/" }
piquelmacros = { path = "../piquel-macros/" }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
clap.workspace = true

paste = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
gix = { version = "0.80", features = ["blocking-network-client" ] }
bollard = { version = "*" }
